<resources>
    <string name="app_name">COVID-19 Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_developer">About Developer</string>
    <string name="contact">Contact</string>
    <string name="donate">Donate</string>
    <string name="feedback">Feedback &amp; Suggestion</string>
    <string name="update_terkini">Latest Update</string>
    <string name="recover">Recovered</string>
    <string name="positif">Confirmed</string>
    <string name="dead">Deaths</string>
    <string name="lawan_covid_19">Fight COVID-19</string>
    <string name="ayo_lawan_covid_19_di_indonesia">COVID-19 data in Indonesia</string>
    <string name="layanan">Services</string>
    <string name="rumah_sakit_rujukan">Referral Hospital</string>
    <string name="apa_itu_covid_19">Survive in the Pandemic</string>
    <string name="kasus_internasional">International Data</string>
    <string name="gejala_covid_19">Self Diagnosis</string>
    <string name="masukan_nama">Your name</string>
    <string name="saran_amp_masukan">Your Feedback &amp; Suggestion</string>
    <string name="masukan_email">Your email</string>
    <string name="masukan">Check your internet connection</string>
    <string name="thankyou">Thank you for your feedback :)</string>
    <string name="error">This field is required</string>
    <string name="submit">Submit</string>
    <string name="any_feedback_or_suggestion_would_be_appreciated">Give us feedback</string>
    <string name="thank_you_for_your_kindness_you_can_contact_the_developer_to_make_a_donation">Thank you for your kindness, you can contact the developer to make a donation :)</string>
    <string name="thank_you">Thank You!</string>
    <string name="symptoms">Symptoms</string>
    <string name="notif">New notification</string>
    <string name="empty">Choose one answer</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="warning">WARNING!</string>
    <string name="are_you_sure_want_exit">Are you sure want exit?</string>
    <string name="staysafe">Stay Safe!</string>
    <string name="danger">Immediately consult your doctor for further treatment!</string>
    <string name="safe">You have no symptoms, stay home, take care of your hygiene and health</string>
    <string name="pertanyaan">Question</string>
    <string name="next">Next</string>
    <string name="punya_gejala_covid_19">Have symptoms of COVID-19?</string>
    <string name="daftar_rumah_sakit_rujukan_di_indonesia">list of referral hospitals</string>
    <string name="face_nmask">Face\nMask</string>
    <string name="hand_sanitizier">Hand\nSanitizier</string>
    <string name="latex_gloves">Healty\nFood</string>
    <string name="fever">Fever</string>
    <string name="cough">Cough</string>
    <string name="tiredness">Tiredness</string>
    <string name="sore_troath">Breathless</string>
    <string name="requirement">Requirement</string>
    <string name="prevention">Prevention</string>
    <string name="don_t_panic">Don\'t Panic</string>
    <string name="physical_distancing">Physical Distancing</string>
    <string name="wash_hand">Wash Hand</string>
    <string name="stay_at_home">Stay at Home</string>
    <string name="how_to_survive_ncovid_19_pandemic">How to survive\nCOVID-19 pandemic</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="multivitamin_nsuplement">Multivitamin\nSuplement</string>
    <string name="hai_my_name_is_adrian_daniel_and_this_is_an_application_about_coronavirus">Hai, my name is Adrian Daniel and this is an application about COVID-19</string>
    <string name="setting">Setting</string>

</resources>