<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_swipe"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_below="@id/relativeLayout"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/fight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lawan_covid_19"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:fontFamily="@font/ptsansbold" />

                    <TextView
                        android:layout_below="@id/fight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/ayo_lawan_covid_19_di_indonesia"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:fontFamily="@font/ptsansreg" />

                </RelativeLayout>
            </FrameLayout>


            <RelativeLayout
                android:layout_below="@id/frameLayout"
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/ptsansbold"
                    android:text="@string/update_terkini"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/ptsansreg"
                    android:text="loading..."
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/data_corona"
                android:layout_below="@id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:scrollIndicators="none"
                android:scrollbars="none" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

